feat: 구조 변경 및 정리 작업

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,5 +38,10 @@
     "naver": true,
     "JSX": true,
     "NodeJS": true
-  }
+  },
+  "ignorePatterns": [
+    "node_modules",
+    "tailwind.config.ts",
+    "commitlint.config.js"
+  ]
 }
