--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@tanstack/react-query": "^5.40.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
+    "nanoid": "^5.0.7",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "recoil": "^0.7.7",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
