--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "recoil": "^0.7.7",
-    "tailwind-merge": "^2.3.0"
+    "react-virtualized-auto-sizer": "^1.0.24",
+    "react-window": "^1.8.10",
+    "react-window-infinite-loader": "^1.0.9",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.2.1",
@@ -33,6 +35,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-window": "^1.8.8",
+    "@types/react-window-infinite-loader": "^1.0.9",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
