--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "prettier": "^3.2.5",
     "storybook": "^8.2.7",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack": "^5.93.0"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
